[gd_scene load_steps=2 format=3 uid="uid://cknaw7q7h8p2r"]

[ext_resource type="Script" uid="uid://drfe4fjnu2igv" path="res://ui/ActionQueuePanel.gd" id="1"]

[node name="ActionQueuePanel" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -80.0
offset_right = 300.0
offset_bottom = -8.0
grow_vertical = 0
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="CurrentLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Current: Your Turn"
horizontal_alignment = 1

[node name="QueueLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Up Next: "
horizontal_alignment = 1
